--- a/geocoder.html
+++ b/geocoder.html
@@ -15,7 +15,7 @@
             }
             .maker{
                 width: 100px;
-                height: 100px;
+                height: 50px;
             }
             h1{
                 color: blue;
@@ -33,19 +33,31 @@
                 </div>
             </div>
             <!-- 1行 -->
+        
             <div class="form-group row mt-3">
-                <label class="col-sm-2 col-form-label">地名</label>
-                <div class="col-sm-10">
-                    <input type="text" class="form-control" id="address">
+                <label class="col-sm-2 col-form-label text-center">地名</label>
+                <div class="col-sm-8">
+                    <input type="search" class="form-control" id="address" required>
+                </div>
+                <div class="col-sm-2">
+                    <button class="btn btn-primary form-control" id="address_search_button">地名で検索</button>
+                </div>
+            </div>
+      
+            <div class="form-group row mt-3">
+                <label class="col-sm-2 col-form-label text-center">緯度</label>
+                <div class="col-sm-3">
+                    <input type="search" class="form-control" id="lat">
+                </div>
+                <label class="col-sm-2 col-form-label text-center">緯度</label>
+                <div class="col-sm-3">
+                    <input type="search" class="form-control" id="lng">
+                </div>
+                <div class="col-sm-2">
+                    <button class="btn btn-primary form-control" id="latlng_search_button">緯度・経度で検索</button>
                 </div>
             </div>
 
-            <!-- 1行 -->
-            <div class="form-group row">
-                <div class="offset-sm-2 col-sm-10">
-                    <button type="submit" class="btn btn-primary form-control" id="button">登録</button>
-                </div>
-            </div>
             <div class="row mt-5">
                 <div id="map" class="col-sm-12"></div>
             </div>
