--- a/geocoder.html
+++ b/geocoder.html
@@ -10,17 +10,22 @@
         <style>
             #map {
                 width: 100%;
-                height: 700px;
+                height: 500px;
                 border: solid 2px red;
             }
             .maker{
-                width: 100px;
-                height: 50px;
+                /*width: 100px;*/
+                /*height: 50px;*/
             }
             h1{
                 color: blue;
                 padding: 10px;
                 border: solid 2px blue;
+                border-radius: 30px;
+            }
+            .search_box{
+                border: solid 2px skyblue;
+                padding: 20px;
                 border-radius: 30px;
             }
         </style>
@@ -29,22 +34,22 @@
         <div class="container">
             <div class="row mt-3">
                 <div class="col-sm-12">
-                    <h1 class="text-center">地名検索</h1>
+                    <h1 class="text-center">検索</h1>
                 </div>
             </div>
             <!-- 1行 -->
         
-            <div class="form-group row mt-3">
+            <div class="form-group row mt-3 search_box">
                 <label class="col-sm-2 col-form-label text-center">地名</label>
                 <div class="col-sm-8">
                     <input type="search" class="form-control" id="address" required>
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-2 mt-3">
                     <button class="btn btn-primary form-control" id="address_search_button">地名で検索</button>
                 </div>
             </div>
       
-            <div class="form-group row mt-3">
+            <div class="form-group row mt-3 search_box">
                 <label class="col-sm-2 col-form-label text-center">緯度</label>
                 <div class="col-sm-3">
                     <input type="search" class="form-control" id="lat">
@@ -53,8 +58,8 @@
                 <div class="col-sm-3">
                     <input type="search" class="form-control" id="lng">
                 </div>
-                <div class="col-sm-2">
-                    <button class="btn btn-primary form-control" id="latlng_search_button">緯度・経度で検索</button>
+                <div class="col-sm-2 mt-3">
+                    <button class="btn btn-primary form-control" id="latlng_search_button">緯度経度で検索</button>
                 </div>
             </div>
 
