--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <!-- 1行 -->
         
             <div class="form-group row mt-3 search_box">
-                <label class="col-sm-2 col-form-label text-center">地名</label>
+                <label class="col-sm-2 col-form-label text-center">地名検索</label>
                 <div class="col-sm-8">
                     <input type="search" class="form-control" id="address" required>
                 </div>
@@ -54,7 +54,7 @@
                 <div class="col-sm-3">
                     <input type="search" class="form-control" id="lat">
                 </div>
-                <label class="col-sm-2 col-form-label text-center">緯度</label>
+                <label class="col-sm-2 col-form-label text-center">経度</label>
                 <div class="col-sm-3">
                     <input type="search" class="form-control" id="lng">
                 </div>
