--- a/index.html
+++ b/index.html
@@ -34,13 +34,13 @@
         <div class="container">
             <div class="row mt-3">
                 <div class="col-sm-12">
-                    <h1 class="text-center">検索</h1>
+                    <h1 class="text-center">地図検索</h1>
                 </div>
             </div>
             <!-- 1行 -->
         
             <div class="form-group row mt-3 search_box">
-                <label class="col-sm-2 col-form-label text-center">地名検索</label>
+                <label class="col-sm-2 col-form-label text-center">地名</label>
                 <div class="col-sm-8">
                     <input type="search" class="form-control" id="address" required>
                 </div>
