--- a/show_map.html
+++ b/show_map.html
@@ -2,6 +2,7 @@
 <html lang="ja">
   <head>
     <meta charset="utf-8">
+    <link rel="shortcut icon" href="map.ico">
     <title>Google Maps API サンプル</title>
   </head>
   <body>
